lab3/manifests/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab3-frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - shabashov.com
    secretName: shabashov-tls
  rules:
  - host: shabashov.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lab3-frontend-service
            port:
              number: 3000
